--- a/styles/principalStyle.css
+++ b/styles/principalStyle.css
@@ -211,6 +211,7 @@ img{
     font-size: 40px;
     margin-bottom: 5%;
     background-color:transparent;
+    font-weight: bold;
 }
 .quienes-somos-item ul{
     margin-top:3%;
