--- a/styles/principalStyle.css
+++ b/styles/principalStyle.css
@@ -341,3 +341,148 @@ img{
     justify-content:center;
     
 }
+
+
+
+
+
+
+@media (max-width: 1547px) {
+    .info-institucion h3{
+        text-align: center;
+    }
+  }
+
+@media (max-width:1385px){
+    .botones-registro button{
+        width:76%;
+        height: 84px;
+    }
+}
+
+@media (max-width:1261px){
+    .quienes-somos-item ul{
+        margin-top: none;
+    }
+    .quienes-somos{
+        padding-top: 5%;
+    }
+}
+@media (max-width:1204px){
+    .quienes-somos h3{
+        margin-bottom: -2%;
+        font-size: 50px;
+    }
+}
+@media (max-width:1055px){
+    .titulo-que-ofrecemos h3{
+        font-size: 50px;
+    }
+    .caracteristicas-items p{
+        font-size:17px;
+        margin-top:26px;
+    }
+}
+
+@media (max-width:997px){
+    .quienes-somos-item p{
+        font-size: 22px;
+    }
+    .quienes-somos-item ul li{
+        font-size: 19px;
+    }
+    .info-institucion h3{
+        font-size: 51px;
+    }
+
+    .info-institucion p{
+        font-size: 21px;
+    }
+    .botones-registro button{
+        width:74%;
+        height: 76px;
+        font-size: 20px;
+    }
+}
+
+@media (max-width:961px){
+    .caracteristicas-items img {
+        width: 84px;
+        height: 84px;
+        margin-top: 20px;
+    }
+    .caracteristicas-items p{
+        font-size: 16px;
+    }
+    .info-app img {
+        width: 410px;
+        height: 441px;
+    }
+}
+
+@media (max-width:915px){
+    .caracteristicas-items p{
+        font-size: 99%;
+    }
+}
+@media (max-width:908px){
+    .caracteristicas-items p{
+        font-size: 0.98rem;
+    }
+    .quienes-somos{
+        height: 437px;
+    }
+    .info-app img{
+        left: 40%;
+    }
+    .botones-registro h4{
+        font-size: 27px;
+        text-align: center;
+    }
+    .barra-navegacion li {
+        text-align: center;
+        font-size: 1.4rem;
+    }
+}
+
+@media (max-width:843px){
+    .barra-navegacion li {
+        text-align: center;
+        font-size: 1.2rem;
+    }
+    .avalible-1 img {
+        width: 70%;
+    }
+    .avalible-2 img{
+        width: 89%;
+    }
+    .footer p {
+        font-size: 16px;
+    }
+    .info-institucion h3 {
+        font-size: 2.5em;
+    }
+    .quienes-somos h3 {
+        font-size: 3em;
+    }
+    .quienes-somos-item p {
+        font-size: 1.3em;
+    }
+    .caracteristicas-items h3 {
+        font-size: 1.5em;
+    }
+    .caracteristicas-items p {
+        font-size: 0.9rem;
+    }
+    .quienes-somos {
+        height: 400px;
+    }
+    .footer {
+        height: 300px;
+    }
+}
+@media (max-width: 810px){
+    .quienes-somos {
+    height: 550px;
+    }
+}
