--- a/styles/principalStyle.css
+++ b/styles/principalStyle.css
@@ -328,6 +328,10 @@ img{
     background-color:transparent;
     
 }
+.apps{
+    background-color:transparent;
+}
+
 .avalible-1{
     background-color:transparent;
     justify-content:space-evenly;
@@ -484,5 +488,220 @@ img{
 @media (max-width: 810px){
     .quienes-somos {
     height: 550px;
+    }
+}
+@media (max-width: 810px){
+    .quienes-somos {
+    height: 550px;
+    }
+}
+
+@media (max-width:425px){
+    .barra-navegacion{
+        display: none !important;
+    }
+    .info-app{
+        position:static;
+        display: block;
+        text-align: center;
+        height: auto;
+        width: 100%;
+        
+    }
+    .info-app img{
+        position: static;
+        left: 0;
+        top: 0;
+        z-index: 0;
+        width: 100px;
+        height: 100px;
+        width: 180px;
+        height: 180px;
+        margin-top: 9px;
+    }
+    
+    .texto-inicio{
+        position: static;
+        z-index: 0;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: auto;
+        padding: 0% 4%;
+    }
+    .texto-inicio h2{
+        font-size: 19px;
+    }
+    .texto-inicio p{
+        font-size: 17px;
+        margin-top: 25px;
+    }
+    .botones-registro{
+        position: static;
+        z-index: 0;
+        top:0;
+        left: 0;
+        display: grid !important;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+        width: 100%;
+    }
+    .botones-registro h4{
+        grid-column: 1/3;
+        grid-row: 1;
+        font-size: 20px;
+
+    }
+    .botones-registro button{
+        grid-row: 2;
+        width: 66%;
+        height: 71px;
+        font-size: 14px;
+        margin-left: 17%;
+    }
+    .que-ofrecemos{
+        height: auto;
+        display: block !important;
+        text-align: center;
+        
+    }
+    .que-ofrecemos h3{
+        font-size: 36px;
+    }
+    .caracteristicas{
+        padding-bottom: 0%;
+        padding-left: 0%;
+        padding-right: 0%;
+        display: block !important;
+        text-align: center; 
+    }
+    .caracteristicas-items{
+        width: 100%;
+        padding: 0% 16%;
+    }
+    .linea-caracteristica{
+        width: 88%;
+        height: 4px;
+        margin:auto;
+    }
+    .quienes-somos{
+        height: auto;
+        width: 100%;
+        display: block !important;
+    }
+    .quienes-somos h3{
+        font-size: 2em;
+        margin: 6% 0%;
+
+    }
+    .quienes-somos p{
+        font-size: 1em;
+        text-align: inherit;
+    }
+    .quienes-somos ul{
+        margin-bottom: 8%;
+    }
+    .quienes-somos ul li{
+        font-size: 0.7em;
+    }
+    .quienes-somos-item{
+        width: 100%;
+        padding: 0% 10%;
+        margin: 0% 0%;
+    }
+    .linea-quienes{
+        margin-left: 10%;
+        width: 80%;
+        height: 4px;
+    }
+    .institucion-asociada{
+        height: auto;
+    }
+    .contenido-institucion{
+        width: 100%;
+        height: 100%;
+        display: block !important;
+        align-items: center;
+        text-align: center;
+    }
+    .contenido-institucion img{
+        width: 171px;
+        height: 171px;
+    }
+    .info-institucion{
+        width: 100%;
+        margin-bottom: 6%;
+    }
+    .info-institucion h3{
+        font-size: 1.5em;
+    }
+    .info-institucion p{
+        font-size:18px;
+        padding: 0% 4%;
+    }
+    .footer{
+        height: auto;
+        width: 100%;
+    }
+    .footer-info{
+        display:grid !important;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto;
+    }
+    .footer-item{
+        width:auto;
+    }
+    .contactenos{
+        grid-column:1;
+        grid-row: 1;
+    }
+    .footer-item h5 {
+        font-size: 1.1rem;
+    }
+    .footer p {
+        font-size: 13px;
+        margin-top: 5%;
+    }
+    .siguenos{
+        grid-column:2;
+        grid-row: 1;
+    }
+    .descargalo{
+        grid-column:1/3;
+        grid-row: 2;
+    }
+    .avalible-1 img{
+        width: 46%;
+        padding-left: 4%;
+        height: 80%;
+    }
+    .avalible-2 img{
+        width: 89%;
+    }
+    .contenedor-iconos{
+        width: 100%;
+        height: auto;
+        flex-direction: column;
+    }
+    .svg-inline--fa.fa-w-14 {
+        width: -0.125em !important;
+    }
+    .fa-3x {
+        font-size: 1.8em !important;
+    }
+
+}
+
+@media (max-width:375px){
+    .botones-registro button{
+        height: 56px;
+    }
+    .imgLogo {
+        margin-left: 33px;
+        width: 39%;
+        height: auto;
+    }
+    .quienes-somos-item {
+        margin: 0% 0%;
     }
 }
