--- a/styles/principalStyle.css
+++ b/styles/principalStyle.css
@@ -685,6 +685,7 @@ img{
         width: 100%;
         height: auto;
         flex-direction: column;
+        align-items: center;
     }
     .svg-inline--fa.fa-w-14 {
         width: -0.125em !important;
