--- a/styles/registro_estudiante.css
+++ b/styles/registro_estudiante.css
@@ -250,7 +250,233 @@ img{
     justify-content:center;
     
 }
+.fa-arrow-left:hover{
+    
+}
 
+
+
+@media (max-width: 1547px) {
+
+  }
+
+@media (max-width:1385px){
+
+}
+
+@media (max-width:1261px){
+    .formulario {
+        
+        grid-template-columns: 1fr 1fr 13% 1fr 1fr;
+        
+    }
+}
+@media (max-width:1204px){
+
+}
+@media (max-width:1055px){
+
+}
+
+@media (max-width:997px){
+
+}
+
+@media (max-width:961px){
+
+}
+
+@media (max-width:915px){
+
+}
+@media (max-width:908px){
+
+}
+
+@media (max-width:843px){
+    .barra-navegacion li {
+        text-align: center;
+        font-size: 1.2rem;
+    }
+    .avalible-1 img {
+        width: 70%;
+    }
+    .avalible-2 img{
+        width: 89%;
+    }
+    .footer p {
+        font-size: 16px;
+    }
+
+    .footer {
+        height: 300px;
+    }
+}
+@media (max-width: 810px){
+
+}
+@media (max-width: 810px){
+
+}
+
+@media (max-width:425px){
+    .imgLogo {
+        margin-left: 5%;
+    }
+    .barra-navegacion{
+        display: none !important;
+    }
+    .titulo-registro {
+        width: 100%;
+        justify-content: end;
+        align-content: center;
+        height: auto;
+        margin-top: 2%;
+        flex-direction: column;
+    }
+    .svg-inline--fa.fa-w-14 {
+        width: 2.875em;
+        margin-bottom: 7%;
+    }
+    .titulo-registro h3 {
+        width: 100%;
+        text-align: center;
+        font-size: 2.5rem;
+        font-weight: 400;
+        font-family: 'Bebas Neue', cursive;
+    }
+    .formulario {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-content: space-around;
+        justify-content: space-between;
+        align-items: stretch;
+    }
+    .nombre {
+      
+        padding-left: 0%; 
+        align-items: center; 
+    }
+    .apellido {
+       
+        padding-right: 0%; 
+        align-items: center;
+    }
+    .correo {
+        
+        padding-left: 0%; 
+        align-items: center;
+    }
+    .telefono {
+        grid-row: 2;
+        grid-column: 4/6;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-right: 0%;
+        
+    }
+    .pass {
+        
+        align-items: center;
+        padding-left: 0%;
+        
+    }
+    .c-pass {
+        align-items: center;
+        padding-right: 0%;
+        
+    }
+    .item-formulario {
+        margin-top: 13%;
+    }
+    .cuerpo-registro {
+        height: 62pc;
+        align-content: center;
+        background: white;
+    }
+    
+    .formulario button {
+        width: 70%;
+        height: 8%;
+        margin-bottom: 7%;
+        margin-top: 3%;
+        margin-left: 15%;
+    }
+    .formulario p {
+        margin-bottom: 0rem;
+        width: 72%;
+    }
+
+    .formulario input {
+        width: 73%;
+        height: 100%;
+    }
+    .footer{
+        height: auto;
+        width: 100%;
+    }
+    .footer-info{
+        display:grid !important;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto auto;
+    }
+    .footer-item{
+        width:auto;
+    }
+    .contactenos{
+        grid-column:1;
+        grid-row: 1;
+    }
+    .footer-item h5 {
+        font-size: 1.1rem;
+    }
+    .footer p {
+        font-size: 13px;
+        margin-top: 5%;
+    }
+    .siguenos{
+        grid-column:2;
+        grid-row: 1;
+    }
+    .descargalo{
+        grid-column:1/3;
+        grid-row: 2;
+    }
+    .avalible-1 img{
+        width: 46%;
+        padding-left: 4%;
+        height: 80%;
+    }
+    .avalible-2 img{
+        width: 42%;
+    }
+    .contenedor-iconos{
+        width: 100%;
+        height: auto;
+        
+        align-items: center;
+    }
+    .svg-inline--fa.fa-w-14 {
+        width: -0.125em !important;
+    }
+    .fa-3x {
+        font-size: 1.8em !important;
+    }
+    
+
+
+
+
+
+
+    
+
+}
 
 
 
