--- a/views/registro_estudiante.html
+++ b/views/registro_estudiante.html
@@ -49,7 +49,7 @@
     <!--Registro como estudiante-->
     <div class="d-flex flex-column cuerpo-registro">
         <div class="d-flex titulo-registro">
-            <i class="fas fa-arrow-left fa-2x"></i>
+            <i class="fas fa-arrow-left fa-2x"></i><a href="www.google.com"></a> </i>
             <h3>REGISTRO COMO ESTUDIANTE</h3>
         </div>
         <div class="formulario">
