--- a/styles/registro_profesor.css
+++ b/styles/registro_profesor.css
@@ -64,8 +64,34 @@ img{
     
 }
 
+
+.cuadro-azul{
+    width: 100%;
+    color: white;
+    height: 200px;
+    align-items: center;
+    justify-content: center;
+}
+.elementos-cuadro-azul{
+    background-color: #3B8BD6;
+    font-style: italic;
+    width: 80%;
+    height: auto;
+    padding: 1%;
+    flex-direction: column;
+}
+
+.elementos-cuadro-azul p{
+    background-color: transparent;
+    font-size:15px;
+}
+
+.fome{
+    text-align: end;
+    padding-right: 5%;
+}
 .cuerpo-registro {
-    height: 36pc;
+    height: 67pc;
     background: white;
 }
 
@@ -85,6 +111,7 @@ img{
     font-size: 3em;
     font-weight: 400;
     font-family: 'Bebas Neue', cursive;
+    margin: 15px 0px;
 }
 .titulo-registro svg{
     width: 20%;
@@ -113,9 +140,9 @@ img{
     outline: none;
 }
 .formulario button{
-    grid-row: 4;
-    grid-column: 3;
-    width: 100%;
+    grid-row: 5;
+    grid-column: 2/3;
+    width: 78%;
     height: 60%;
     border: none;
     background-color: #34C900;
@@ -188,6 +215,29 @@ img{
     align-items: center;
     padding-right: 10%;
     align-items: flex-start;
+}
+.materias{
+    grid-column:1/3;
+    grid-row: 4;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 10%;
+    align-items: flex-end;
+}
+.describase{
+    grid-row: 4/6;
+    grid-column:4/6;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 10%;
+    align-items: flex-start;
+}
+.describase input{
+    height: 65%;
 }
 
 
@@ -350,6 +400,10 @@ img{
         font-weight: 400;
         font-family: 'Bebas Neue', cursive;
     }
+    .elementos-cuadro-azul p {
+        background-color: transparent;
+        font-size: 13px;
+    }
     .formulario {
         width: 100%;
         height: 100%;
@@ -396,18 +450,36 @@ img{
         padding-right: 0%;
         
     }
+    .materias {
+        align-items: center;
+        padding-right: 0%;
+        padding-left: 0%;
+        
+    }
+    .describase {
+        align-items: center;
+        padding-right: 0%;
+        padding-left: 0%;
+        
+    }
+    .describase input {
+        height: 200px !important;
+    }
+
+
+
     .item-formulario {
         margin-top: 13%;
     }
     .cuerpo-registro {
-        height: 62pc;
+        height: 99pc;
         align-content: center;
         background: white;
     }
     
     .formulario button {
         width: 70%;
-        height: 8%;
+        height: 6%;
         margin-bottom: 7%;
         margin-top: 3%;
         margin-left: 15%;
@@ -482,13 +554,5 @@ img{
     
 
 }
-
-
-
-
-
-
-
-
 
 
