--- a/styles/registro_profesor.css
+++ b/styles/registro_profesor.css
@@ -32,11 +32,22 @@ img{
 .imgLogo{
     margin-left: 60px;    
 }
+
+
 .barra-navegacion{
     background-color: var(--var-red);
     padding: 0 !important;
     margin: 0; 
     color: white;
+}
+.button-bar{
+    background-color:transparent;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    color:black;
+    border : none;
+    display: none;
 }
 
 .barra-navegacion li{
@@ -305,15 +316,12 @@ img{
     justify-content:center;
     
 }
-.fa-arrow-left:hover{
-    
-}
 
 
 
 @media (max-width: 1547px) {
 
-  }
+}
 
 @media (max-width:1385px){
 
@@ -370,16 +378,86 @@ img{
 @media (max-width: 810px){
 
 }
-@media (max-width: 810px){
+@media (max-width: 675px){
+        .navbar-brand {
+            padding-top: .3125rem;
+            padding-bottom: .3125rem;
+            margin-right: 0rem; 
+            font-size: 0rem; 
+            text-decoration: none;
+            white-space: nowrap;
+            
+        }
+        .button-bar {
+            display: block;
+        }
+        .loguito{
+            display: grid !important ; 
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
+            grid-template-rows: 1fr; 
+        }
+        .loguito a {
+            grid-column: 3/6;
+        }
+        .imgLogo {
+            margin-left: 5px;
+            width: 79%;
+            height: auto;
+        }
+        .container-fluid{
+            flex-wrap: nowrap !important;
+        }
+    
+        .container_linea {
+            background-color: #E42322;
+            display: none !important;
+        }
+    
+        .barra-navegacion {
+            /* display: none !important; */
+            flex-direction: column;
+            display: flex !important;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            z-index: 3;
+            left: 100%;
+            transition: left 0.3s;
+            justify-content: flex-start !important;
+        }
+    
+        .barra-navegacion-visible{
+            
+            left: 0% !important;
+    
+        }
+    
+        .list-group-horizontal {
+            flex-direction: column;
+        }
+        .fa-3x {
+            font-size: 1.8em !important;
+        }
+        .svg-inline--fa.fa-w-14 {
+            width: -0.125em !important;
+        }
+        .h5, h5 {
+            font-size: 1rem;
+        }
+        .footer p {
+            font-size: 14px;
+        }
+        .formulario button {
+            width: 128%;
+            margin-left: -19px;
+        }
+    }
+    
 
-}
 
 @media (max-width:425px){
     .imgLogo {
         margin-left: 5%;
-    }
-    .barra-navegacion{
-        display: none !important;
     }
     .titulo-registro {
         width: 100%;
@@ -415,12 +493,12 @@ img{
         align-items: stretch;
     }
     .nombre {
-      
+    
         padding-left: 0%; 
         align-items: center; 
     }
     .apellido {
-       
+    
         padding-right: 0%; 
         align-items: center;
     }
