--- a/views/registro_estudiante.html
+++ b/views/registro_estudiante.html
@@ -15,42 +15,47 @@
 </head>
 <body>
     <nav class="navbar navbar-light ">
-
-        <div class="container-fluid">
+        
+        <div class="container-fluid loguito">
+            <button class="button-bar">
+                <i class="fas fa-bars"></i>
+            </button>
             <a class="navbar-brand" href="#">
-                <img src="./../assets/logo.png" alt="AprenDX" width="250" height="50" class="d-inline-block align-text-top imgLogo">
+                <img id="logo" src="./../assets/logo.png" alt="AprenDX" width="250" height="50" class="d-inline-block align-text-top imgLogo">
             </a>
         </div>
-
     </nav>
     
-    <div class="d-flex p-2 bd-highlight justify-content-center barra-navegacion">
+    <nav class="d-flex p-2 bd-highlight justify-content-center barra-navegacion">
         <ul class="list-group list-group-horizontal">
-            <li class="list-group-item"> <a href="#">Inicio</a> </li>
+            <li class="list-group-item uwu"> <a href="./../index.html">Inicio</a> </li>
             <div class="d-flex container_linea">
                 <div class="d-flex lineaxd"></div>
             </div>
-            <li class="list-group-item"><a href="#que-ofrecemos">¿Qué ofrecemos?</a></li>
+            <li class="list-group-item uwu"><a href="./../index.html">¿Qué ofrecemos?</a></li>
             <div class="d-flex container_linea">
                 <div class="d-flex lineaxd"></div>
             </div>
-            <li class="list-group-item"><a href="#quienes-somos">¿Quiénes somos?</a></li>
+            <li class="list-group-item uwu"><a href="./../index.html">¿Quiénes somos?</a></li>
             <div class="d-flex container_linea">
                 <div class="d-flex lineaxd"></div>
             </div>
-            <li class="list-group-item"><a href="#">Asociación</a></li>
+            <li class="list-group-item uwu"><a href="./../index.html">Asociación</a></li>
             <div class="d-flex container_linea">
                 <div class="d-flex lineaxd"></div>
             </div>
-            <li class="list-group-item"><a href="#">Descárgalo</a></li>
+            <li class="list-group-item uwu"><a href="./../index.html">Descárgalo</a></li>
         </ul>
-    </div>
+    </nav>
 
 
     <!--Registro como estudiante-->
     <div class="d-flex flex-column cuerpo-registro">
         <div class="d-flex titulo-registro">
-            <i class="fas fa-arrow-left fa-2x"></i><a href="www.google.com"></a> </i>
+            <div id="flecha">
+                <i  class="fas fa-arrow-left fa-2x"></i></i>
+
+            </div>
             <h3>REGISTRO COMO ESTUDIANTE</h3>
         </div>
         <div class="formulario">
@@ -121,6 +126,8 @@
         </div>
         <p>© Copyright 2021 AprenDX. Todos los derechos reservados.</p>
     </footer>
+    <script src="./../scripts/responsive-bar.js"></script>
+    <script src="./../scripts/conectar-links.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
